fix: added verbose

--- a/run_experiment.ipynb
+++ b/run_experiment.ipynb
@@ -81,6 +81,7 @@
     "    training_data=training_df,\n",
     "    validation_data=validation_df,\n",
     "    early_stopping_patience=10,\n",
+    "    verbose=True\n",
     ")"
    ]
   },
@@ -177,6 +178,7 @@
     "        training_data=training_df,\n",
     "        validation_data=validation_df,\n",
     "        early_stopping_patience=20,\n",
+    "        verbose=True\n",
     "    )\n",
     "    print(experiment.hash_dir)\n",
     "    experiment.run(validate=True)"
